[package]
name = "protonvpn"
version = "0.1.0"
authors = ["hybras <24651269+hybras@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "protonvpn cli in rust"
homepage = "https://github.com/hybras/protonvpn"
repository = "https://github.com/hybras/protonvpn"
readme = "README.md"
categories = ["command-line-utilities"]
exclude = ["/.vscode"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
lazy_static = "1.4"
dirs = "3.0"
literally = "0.1"
url = {version = "2.2.0", features = ["serde"]}
serde = "1.0"
anyhow = "1.0"
strum = "0.20"
strum_macros = "0.20"
confy = "0.4"
ureq = { version = "2.0.0-rc4", features = ["json"] }
chrono = { version = "0.4", features = ["serde"]  }
serde_json = "1.0"
askama = "0.10"
rpassword = "5.0"
tempfile = "3.1"
