[package]
name = "protonvpn"
version = "0.2.0"
authors = ["hybras <24651269+hybras@users.noreply.github.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "protonvpn cli in rust"
homepage = "https://github.com/hybras/protonvpn"
repository = "https://github.com/hybras/protonvpn"
readme = "README.md"
categories = ["command-line-utilities", "vpn"]
exclude = ["/.vscode", ".github"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Cli
structopt = {version = "0.3", features = ["paw"] }
paw = "1.0"

# Interactive Cli
rpassword = "5.0"

# Application
lazy_static = "1.4"
directories = "3.0"
url = {version = "2.2.0", features = ["serde"]}
confy = "0.4"
ureq = { version = "2.0", features = ["json"] }
chrono = { version = "0.4", features = ["serde"]  }
askama = "0.10"

# Serde
serde = "1.0"
serde_json = "1.0"

# Misc
anyhow = "1.0"
strum = "0.20"
strum_macros = "0.20"
literally = "0.1"
tempfile = "3.2"
